# alfa-framework

./: .gitignore  README.md
.github/workflows/: ci.yml  format-check.yml  ros2-humble-build.yml
ci/: .clang-format  .licenseheader  .rules.verible  check_file_format.sh  fix_all.sh  fix_file_format.sh  fix_license_year.sh  fix_missing_headers.sh  verify_file_format.sh  verify_headers.sh
docs/guides/: alfa_install.md  extensions_user_guide.md  monitor_user_guide.md
drivers/: README.md
drivers/alfa_ext/: Makefile  alfa_ext.c
drivers/alfa_ext_mem/: Makefile  alfa_ext_mem.c
drivers/alfa_mem/: Makefile  alfa_mem.c
extensions/: README.md
extensions/hw/ext_distance_filter/: component.xml
extensions/hw/ext_distance_filter/src/: distance_filter.v
extensions/hw/ext_dummy/: component.xml
extensions/hw/ext_dummy/src/: dummy.v
extensions/hw/ext_fogzip_encoder/: component.xml
extensions/hw/ext_fogzip_encoder/inc/: alib_octree
extensions/hw/ext_fogzip_encoder/src/: fog.v
extensions/hw/ext_fogzip_encoder/tb/: fog_tb.v
extensions/hw/ext_fogzip_encoder/xgui/: ext_fog_v1_0.tcl  fog_v1_0.tcl
extensions/sw/ext_anand/: CMakeLists.txt  README.md  package.xml
extensions/sw/ext_anand/src/: main.cpp
extensions/sw/ext_dior/: CMakeLists.txt  dior.code-workspace  package.xml
extensions/sw/ext_dior/src/: main.cpp
extensions/sw/ext_distance_filter/: CMakeLists.txt  README.md  package.xml
extensions/sw/ext_distance_filter/src/: main.cpp
extensions/sw/ext_dummy/: CMakeLists.txt  package.xml
extensions/sw/ext_dummy/src/: main.cpp
extensions/sw/ext_festa/: CMakeLists.txt  package.xml
extensions/sw/ext_festa/src/: main.cpp
extensions/sw/ext_fog_decoder/: CMakeLists.txt  package.xml
extensions/sw/ext_fog_decoder/src/: main.cpp
extensions/sw/ext_fog_encoder/: CMakeLists.txt  package.xml
extensions/sw/ext_fog_encoder/src/: main.cpp
extensions/sw/ext_fogzip_decoder/: CMakeLists.txt  package.xml
extensions/sw/ext_fogzip_decoder/src/: main.cpp
extensions/sw/ext_fogzip_encoder/: CMakeLists.txt  package.xml
extensions/sw/ext_fogzip_encoder/src/: main.cpp
extensions/sw/ext_octree_compression/: CMakeLists.txt  package.xml
extensions/sw/ext_octree_compression/src/: main.cpp
extensions/sw/ext_octree_compression_decoder/: CMakeLists.txt  package.xml
extensions/sw/ext_octree_compression_decoder/src/: main.cpp
extensions/sw/ext_octree_compression_encoder/: CMakeLists.txt  package.xml
extensions/sw/ext_octree_compression_encoder/src/: main.cpp
extensions/sw/ext_patchwork/: CMakeLists.txt  package.xml
extensions/sw/ext_patchwork/src/: patchwork.cpp  patchwork.hpp
extensions/sw/ext_patchworkpp/: CMakeLists.txt  package.xml
extensions/sw/ext_patchworkpp/src/: metrics.hpp  patchworkpp.cpp  patchworkpp.hpp
extensions/sw/ext_pcl_octree_compression/: package.xml
extensions/sw/ext_pcl_octree_compression/src/: main.cpp
extensions/sw/ext_pcl_octree_compression_decoder/: CMakeLists.txt  package.xml
extensions/sw/ext_pcl_octree_compression_decoder/src/: main.cpp
extensions/sw/ext_pcl_octree_compression_encoder/: CMakeLists.txt  package.xml
extensions/sw/ext_pcl_octree_compression_encoder/src/: main.cpp
libs/: README.md
libs/hw/alib_accumulator_fifo/: component.xml
libs/hw/alib_accumulator_fifo/src/: alib_accumulator_fifo.v
libs/hw/alib_accumulator_fifo/tb/: alib_accumulator_fifo_tb.v
libs/hw/alib_circular_fifo/: component.xml
libs/hw/alib_octree/: component.xml
libs/hw/alib_octree/inc/: alib_ram  (+3 more)
libs/hw/alib_range_image/: component.xml
libs/hw/alib_ranked_frequency_table/: component.xml
libs/sw/alib_compression/: CMakeLists.txt  package.xml
libs/sw/alib_extmem/: CMakeLists.txt  package.xml
libs/sw/alib_extmem/include/: alib_extmem.hpp
libs/sw/alib_extmem/src/: alib_extmem.cpp
libs/sw/alib_metrics/: CMakeLists.txt  package.xml
libs/sw/alib_octree/: CMakeLists.txt  package.xml
libs/sw/alib_range_image/: CMakeLists.txt  README.md  package.xml
libs/sw/alib_range_image/include/: alib_range_image.hpp
libs/sw/alib_range_image/src/: alib_range_image.cpp
meta-alfa/: README.md
meta-alfa/conf/: layer.conf
meta-alfa/recipes-alfa/alfa-dd/: alfa-dd-ext-mem_1.0.0-1.bb  alfa-dd-ext_1.0.0-1.bb  alfa-dd-mem_1.0.0-1.bb
meta-alfa/recipes-alfa/alfa-extensions/: ext-anand_1.0.0-1.bb  ext-dior_1.0.0-1.bb  ext-distance-filter_1.0.0-1.bb  ext-dummy_1.0.0-1.bb  ext-festa_1.0.0-1.bb  ext-fogzip_1.0.0-1.bb  ext-octree-compression_1.0.0-1.bb  ext-octree-xor-compression_1.0.0-1.bb  ext-patchwork_1.0.0-1.bb  ext-patchworkpp_1.0.0-1.bb  ext-pcl-octree-compression_1.0.0-1.bb
meta-alfa/recipes-alfa/alfa-libs/: alib-compression_1.0.0-1.bb  alib-extmem_1.0.0-1.bb  alib-metrics_1.0.0-1.bb  alib-octree_1.0.0-1.bb
meta-alfa/recipes-alfa/alfa-msg/: alfa-msg_1.0.0-1.bb
meta-alfa/recipes-alfa/alfa-node/: alfa-node_1.0.0-1.bb
monitor/: CMakeLists.txt  README.md  package.xml
monitor/include/: boxsettings.h  clouds.h  configwindow.h  mainwindow.h  metricwindow.h  noisegenerator.h  pclviewer.h  rosinterface.h  style_sheat.h
monitor/scripts/: evaluation.py  timming_evaluation.py
monitor/src/: boxsettings.cpp  configwindow.cpp  main.cpp  mainwindow.cpp  metricwindow.cpp  noisegenerator.cpp  pclviewer.cpp  rosinterface.cpp
monitor/src/ui/: boxsettings.ui  configwindow.ui  metricwindow.ui  noisegenerator.ui  pclviewer.ui
msgs/: CMakeLists.txt  README.md  package.xml
msgs/msg/: AlfaAlivePing.msg  AlfaMetrics.msg  ConfigMessage.msg  MetricMessage.msg
msgs/srv/: AlfaConfigure.srv
node/: CMakeLists.txt  README.md  package.xml
node/include/: alfa_defines.hpp  alfa_node.hpp  alfa_structs.hpp
node/src/: alfa_hw.cpp  alfa_metrics.cpp  alfa_node.cpp  alfa_parameters.cpp  alfa_pointclouds.cpp  alfa_verbose.cpp
unit/: README.md
unit/src/: AXI.v  cartesianRepresentation.v  cartesianRepresentationAddress.v  cartesianRepresentationPayload.v  controlUnit.v  extensionManagementUnit.v  memoryManagementUnit.v  monitorUnit.v  pointcloud.v  sphericalRepresentation.v  sphericalRepresentationAddress.v  sphericalRepresentationPayload.v  unit.v
(+48 files in other folders)
