<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ext_pcl_octree_compression</name>
  <version>0.0.0</version>
  <description>ALFA Octree Compression Extension using PCL</description>
  <maintainer email="alfa@alfa.org">Ricardo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>alfa_node</depend>
  <depend>alib_octree</depend>
  
  <depend>sensor_msgs</depend>
  <depend>alfa_msg</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
